# inst2ufo

./: README.md  pyproject.toml  tox.ini
.github/workflows/: publish.yml  test.yml
src/inst2ufo/: __init__.py  cmdline.py  copy.py  glyphs.py  libkeys.py  pens.py  remove.py
tests/: copy_test.py  o.glyphs  tt.glyphs
tests/o.ufo/: fontinfo.plist  lib.plist
tests/o.ufo/glyphs/: _notdef.glif  o.glif  space.glif
tests/ps.ufo/: features.fea  fontinfo.plist  lib.plist
tests/ps.ufo/glyphs/: _notdef.glif  contents.plist  layerinfo.plist  o.glif  space.glif
