[project]
name = "inst2ufo"
version = "0.1.0-dev"
description = "Copy TrueType instructions from a binary font to a UFO."
readme = "README.md"
authors = [
    { name = "Jens Kutilek", email = "webmail@kutilek.de" }
]
requires-python = ">=3.11"
dependencies = [
    "fonttools[ufo]>=4.62.0",
    "ufolib2>=0.18.1",
]

[project.scripts]
inst2ufo = "inst2ufo.cmdline:copy"
rmufoinst = "inst2ufo.cmdline:remove"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
